Create FormMethods class, clear and optimaze the whole code

--- a/MosEnergo2.0.csproj
+++ b/MosEnergo2.0.csproj
@@ -92,6 +92,7 @@
       <DependentUpon>AddFlatMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="Checki.cs" />
+    <Compile Include="FormMethods.cs" />
     <Compile Include="HasherMD5.cs" />
     <Compile Include="DB.cs" />
     <Compile Include="Flat.cs">
